--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "botToken": "",
-  "userAccountPassword": "",
+  "botToken": "130750441553133568",
+  "userAccountPassword": "Ammu2017",
   "desiredDiscrim": "0001",
   "changeInterval": "3600000"
 }
